<resources>
    <string name="app_name">Noteify</string>
    <string name="private_string">Private</string>
    <string name="favorites">Favorites</string>
    <string name="all_notes">Notes</string>
    <string name="trash">Trash</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_content">Note body</string>
    <string name="date">Date</string>
    <string name="note_title">Note title</string>
    <string name="add_note_button">Create note button</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="undo">UNDO</string>
    <string name="deleted">Deleted</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="theme">Theme</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="themeKey" translatable="false">theme</string>
    <string name="light" translatable="false">light</string>
    <string name="dark" translatable="false">dark</string>
    <string name="black" translatable="false">black</string>
    <string name="follow_system" translatable="false">follow_system</string>
    <string name="enter_note_body">Enter note body</string>
    <string name="enter_note_title">Enter note title</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="about">About</string>
    <string name="github">GitHub</string>

    <string name="libraries">Libraries</string>
    <string name="librariesKey" translatable="false">libraries</string>

    <string name="shortCutLabel">Create Note</string>
    <string name="shortCutLongLabel">Create a new Note</string>
    <string name="compose">Compose</string>
    <string name="save_note">Save note</string>

    <string name="titleBackPressDialog">Exit without saving?</string>
    <string name="bodyBackPressDialog">Are you sure you want to exit without saving? Note will not be saved.</string>
    <string name="positiveButtonBackPressDialog">Save</string>
    <string name="negativeButtonBackPressDialog">Exit</string>
    <string name="update">Update</string>
    <string name="create_todo">Create Todo</string>
    <string name="set_due_date">Set Due Date</string>
    <string name="category">Category</string>
    <string name="work">Work</string>
    <string name="home">Home</string>
    <string name="chore">Chore</string>
    <string name="self_care">Self care</string>
</resources>