<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="Appearance" >

        <ListPreference
            app:defaultValue="light"
            app:entries="@array/theme_options"
            app:entryValues="@array/theme_values"
            app:key="@string/themeKey"
            app:title="@string/theme"
            android:icon="@drawable/ic_cloudy"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/about">

        <Preference
            app:title="Source Code"
            android:icon="@drawable/ic_github_icon">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/judahben149/Notes_App" />

        </Preference>

        <Preference
            app:key="@string/librariesKey"
            app:title="@string/libraries"
            android:icon="@drawable/ic_info_icon"/>

    </PreferenceCategory>

</PreferenceScreen>