<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_note_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/note_title_FavoriteNoteDetailsScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/transparent"
        android:hint="@string/enter_note_title"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date_created_FavoriteNoteDetailsScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:backgroundTint="@android:color/transparent"
        android:text="date"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_title_FavoriteNoteDetailsScreen" />


    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/favoriteNoteDetails_Divider"
        android:layout_width="match_parent"
        android:layout_height="0.9dp"
        android:layout_marginHorizontal="20dp"
        app:dividerColor="#BDBDBD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_created_FavoriteNoteDetailsScreen"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favoriteNoteDetails_Divider">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_body_FavoriteNoteDetailsScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/enter_note_body"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_saveNote_FavoriteNoteDetailsScreen"
        style="@style/myFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/save_note"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:icon="@drawable/ic_check_mark"
        app:iconPadding="10dp"
        app:iconSize="18dp"
        app:layout_anchor="@id/layout_note_details"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>





