<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/noteItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="6dp"
    android:layout_marginHorizontal="8dp"
    app:cardCornerRadius="8dp"
    android:background="?android:attr/selectableItemBackground"
    app:cardElevation="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="8dp">


        <TextView
            android:id="@+id/tv_noteTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/note_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toStartOf="@+id/favorite_icon"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <ImageView
            android:id="@+id/favorite_icon"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_star"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@id/tv_noteTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_noteTitle"
            app:layout_constraintBottom_toBottomOf="@id/tv_noteTitle"
            />


        <TextView
            android:id="@+id/tv_note_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginEnd="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_noteTitle"
            app:layout_constraintEnd_toStartOf="@id/tv_noteDate"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="4dp"
            android:text="@string/note_content"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_noteDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/date"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_note_description"
            app:layout_constraintBottom_toBottomOf="@id/tv_note_description"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

